# jrag-model/src/main/resources/openapi-interface.yaml
@@ -316,6 +316,26 @@ paths:
             application/json:
               schema:
                 $ref: './openapi-model.yaml#/components/schemas/KnowledgeSearchResponseDto'
+  /v1/rest/jrag/knowledge/markdown:
+    post:
+      tags: [ MarkdownProcessor ]
+      summary: 上传Markdown文件或文件包
+      description: 上传Markdown文件或文件包，包含Markdown文件、图片，支持后缀：md/zip/tar.gz/tar
+      operationId: uploadMarkdown
+      requestBody:
+        description: 上传的文件
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+      responses:
+        "200":
+          description: ok
   /v1/rest/jrag/qa-template:
     get:
       tags: [ QaTemplate ]
